lang/lc/tests/err_type.sys
system test()
{
	!5;
	6 or 7;
}
